nova_tests/plan103_2/negative/atomic_i64_ordering_bad_variant_neg.nv
// Plan 103.2 Ф.9 negative — non-existent MemOrdering variant with atomic op.
//
// EXPECT_CC_ERROR MemOrdering_SequentiallyConsistent
//
// `MemOrdering.SequentiallyConsistent` does not exist — the correct variant
// is `SeqCst`. Nova codegen emits `Nova_MemOrdering_static_SequentiallyConsistent`
// → CC error (undefined). Verifies that typos in ordering variants are
// caught at compile time.

module negative.atomic_i64_ordering_bad_variant_neg

fn bad() {
    mut a = AtomicI64.new(0)
    a.store(1, MemOrdering.SequentiallyConsistent)
}

test "should not compile" {
    bad()
    assert(true)
}
